<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧社区</string>
    <string name="ad">广告</string>
    <string name="tip">提示</string>
    <string name="icon">图标</string>
    <string name="append">添加</string>
    <string name="delete_confirm">是否要删除此数据？</string>
    <string name="sdcard_not_inuse">SD卡不存在或写保护</string>
    <string name="int_zero">0</string>
    <string name="weather">天气</string>
    <string name="weather_temp">℃</string>
    <string name="call_main">对讲通话</string>
    <string name="call_video">视频呼叫</string>
    <string name="call_manager">呼叫物业</string>
    <string name="call_setting">通话设置</string>
    <string name="mode_select">模式选择</string>
    <string name="block_list">屏蔽列表</string>
    <string name="block_list_add">添加到屏蔽列表</string>
    <string name="allow_list">允许列表</string>
    <string name="allow_list_add">添加到允许列表</string>
    <string name="message">视频留言</string>
    <string name="message_add">录制留言</string>
    <string name="message_list">留言记录</string>
    <string name="message_recorder">视频录制</string>
    <string name="message_new">新留言</string>
    <string name="history_list">呼叫记录</string>
    <string name="history_new">新呼叫</string>
    <string name="notice_list">社区通知</string>
    <string name="notice_new">新通知</string>
    <string name="control_main">家电控制</string>
    <string name="control_light">灯光控制</string>
    <string name="control_switch">开关控制</string>
    <string name="control_curtain">窗帘控制</string>
    <string name="control_infrared">红外遥控</string>
    <string name="control_theme">情景模式</string>
    <string name="control_theme_add">添加情景</string>
    <string name="control_key_mute">静音</string>
    <string name="control_key_ok">确定</string>
    <string name="control_key_return">返回</string>
    <string name="control_key_volume">音量</string>
    <string name="control_key_channel">频道</string>
    <string name="control_key_mode">模式</string>
    <string name="control_key_swing">风向</string>
    <string name="control_key_fan">风量</string>
    <string name="control_key_temperature">温度</string>
    <string name="control_key_normal">控制模式：长按红色按键进入学习模式</string>
    <string name="control_key_study">学习模式：长按红色按键退出学习模式\n请先按屏幕按键，再按遥控器按键进行学习</string>
    <string name="device_name">设备名称</string>
    <string name="device_code">设备编号</string>
    <string name="device_unit">设备路数</string>
    <string name="device_type">设备类型</string>
    <string name="theme_add">情景添加</string>
    <string name="theme_name">情景名称</string>
    <string name="media_main">多媒体</string>
    <string name="media_music">音乐播放</string>
    <string name="media_video">视频播放</string>
    <string name="media_photo">数码相框</string>
    <string name="dmt_tupianshow">图片播放</string>
    <string name="music_list">音乐列表</string>
    <string name="music_playing">正在播放</string>
    <string name="music_time">00:00</string>
    <string name="video_list">视频列表</string>
    <string name="shop_main">社区特供</string>
    <string name="safe_main">安全防范</string>
    <string name="defence_now">立即布防</string>
    <string name="defence_enter">系统即将进入布防状态</string>
    <string name="defence_setting">布防设置</string>
    <string name="undefence">撤防</string>
    <string name="undefence_now">立即撤防</string>
    <string name="undefence_mode">撤防模式</string>
    <string name="undefence_setting">撤防设置</string>
    <string name="undefence_password">撤防密码</string>
    <string name="undefence_password_tip">点击修改撤防密码</string>
    <string name="undefence_no_password">无密码撤防</string>
    <string name="undefence_tip_input">输入撤防密码</string>
    <string name="defence_zone">防区</string>
    <string name="defence_zone_setting">防区设置</string>
    <string name="defence_zone_list">防区列表</string>
    <string name="defence_zone_name">防区名称</string>
    <string name="defence_zone_type">防区类型</string>
    <string name="warning_list">报警记录</string>
    <string name="warning_zone">报警区域</string>
    <string name="monitor_main">视频监控</string>
    <string name="monitor_family">视频看家</string>
    <string name="monitor_community">社区监控</string>
    <string name="newmessage">新消息</string>
    <string name="data_loading">加载中</string>
    <string name="data_empty">无数据</string>
    <string name="setting">系统设置</string>
    <string name="call_open">开锁</string>
    <string name="call_view">查看</string>
    <string name="call_accept">接听</string>
    <string name="call_refuse">拒绝</string>
    <string name="call_hangup">挂断</string>
    <string name="infraend">红外</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="build">栋</string>
    <string name="unit">门</string>
    <string name="keyboard_1">1</string>
    <string name="keyboard_2">2</string>
    <string name="keyboard_3">3</string>
    <string name="keyboard_4">4</string>
    <string name="keyboard_5">5</string>
    <string name="keyboard_6">6</string>
    <string name="keyboard_7">7</string>
    <string name="keyboard_8">8</string>
    <string name="keyboard_9">9</string>
    <string name="keyboard_0">0</string>
    <string name="keyboard_tip_room">例如：9栋9门1101</string>
    <string name="sound">声音</string>
    <string name="volume_setting">音量设置</string>
    <string name="ring_warning">警报提示音</string>
    <string name="ring_message">信息提示音</string>
    <string name="ring_call">来电提示音</string>
    <string name="screen">屏幕</string>
    <string name="brightness">亮度调节</string>
    <string name="system">系统</string>
    <string name="version">系统版本</string>
    <string name="server">服务器地址</string>
    <string name="server_ip">服务器地址</string>
    <string name="server_port">服务器端口</string>
    <string name="server_tip_ip">例如：127.0.0.1</string>
    <string name="server_tip_port">例如：80</string>
    <string name="debug_open">开启调试模式</string>
    <string name="debug_close">关闭调试模式</string>
    <string name="phone_bind">绑定手机</string>
    <string name="phone_1">手机1</string>
    <string name="phone_2">手机2</string>
    <string name="phone_3">手机3</string>
    <string name="phone_number">手机号码</string>
    <string name="call_volume">通话音量</string>
    <string name="message_volume">提示音量</string>
    <string name="unlock_password">开锁密码</string>
    <string name="qr_down">第一步\n下载并安装客户端应用</string>
    <string name="qr_bind">第二步\n绑定到客户端应用</string>
    <string name="phone">手机客户端</string>
    <string name="action_success">操作成功</string>
    <string name="action_failed">操作失败</string>

</resources>