<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main" >

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_above="@+id/rl_center"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/rl_center"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/control_key_normal"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/rl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_control_top"
            android:tag="2" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_control_mid"
            android:gravity="center"
            android:text="@string/control_key_temperature"
            android:textColor="@color/gray_dark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_control_btm"
            android:tag="3" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignTop="@+id/rl_center"
        android:layout_toLeftOf="@+id/rl_center"
        android:background="@drawable/btn_control_power"
        android:tag="0" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignTop="@+id/rl_center"
        android:layout_toRightOf="@+id/rl_center"
        android:background="@drawable/btn_control_circle"
        android:tag="4"
        android:text="@string/control_key_swing"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBottom="@+id/rl_center"
        android:layout_toRightOf="@+id/rl_center"
        android:background="@drawable/btn_control_circle"
        android:tag="5"
        android:text="@string/control_key_fan"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBottom="@+id/rl_center"
        android:layout_toLeftOf="@+id/rl_center"
        android:background="@drawable/btn_control_circle"
        android:tag="1"
        android:text="@string/control_key_mode"
        android:textSize="20sp" />

</RelativeLayout>