<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_page"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ad_locked2"
            android:contentDescription="@string/ad" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="30dp" >

        <!-- 这个是显示对方画面的 -->

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/black" >

            <SurfaceView
                android:id="@+id/myview"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/tv_target"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/bg_top"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_open"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/call_open"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/call_accept"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_hangup"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/call_hangup"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>